# the-octo-teller

./: .gitignore  README.md  create.sh  docker-compose.yml  explore.sh  play.sh  pyproject.toml  todo.md
.claude/: CLAUDE.md
.claude/skills/adventure-ingest/: SKILL.md
.github/workflows/: ci.yml
adventures/peril_in_pinebrook/: _meta.md
adventures/peril_in_pinebrook/chapters/: 01_opening.md  02_encounter1.md  03_encounter2.md  04_encounter3.md  05_encounter4.md
adventures/peril_in_pinebrook/maps/: dragon_cave.md  forest_patrol.md
adventures/peril_in_pinebrook/npcs/: dm.md  (+5 more)
docs/: adventure-author.md  architecture.md  bone-engine-v2-design.md  cli-uiux-design.md  data_model.md  exploration-design.md  game-session-design.md  pinebrook_input.md  rendering-refactor-design.md  spatial-combat-design.md  spatial-engine-design.md  spatial-exploration-design.md  time-system-design.md  todo-character-creation-overhaul.md  todo-character-system.md
docs/2024_translate/: INDEX.md  verify_terminology.sh
docs/legacy/: bot_v0.py  dm_prompt_v0.md
src/tot/: models.py
tests/: conftest.py  test_adventure.py  test_adventure_author.py  test_aoe.py  test_area_explore.py  test_area_explore_tui.py  test_canvas.py  test_character_builder.py  test_checks.py  test_conditions.py  test_dice.py  test_exploration.py  test_geometry.py  test_movement.py  test_pathfinding.py  test_prop_prefab.py  test_render_buffer.py  test_rest.py  test_smoke.py  test_spatial.py  test_spells.py  test_tile_canvas.py  test_tiles.py  test_time.py  test_wasd_input.py
tests/integration/: test_self_play.py
(+288 files in other folders)
