[project]
name = "tot-the-octo-teller"
version = "0.1.0"
description = "T.O.T. - The Octo-Teller: AI Dungeon Master for D&D 5e on Telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.43",
    "tiktoken>=0.8",
]
db = [
    "redis>=5.2",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "qdrant-client>=1.12",
]
tui = [
    "textual>=0.50",
    "drawille>=0.2.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "commitizen>=4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tot"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
allowed_prefixes = ["Merge", "Revert"]
